docker_openshift_kafka_scripts/docker_setup/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: default
  labels:
    app: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: "witlab/ingress-training-app1:v0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            {}
