docker_openshift_kafka_scripts/docker_setup/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: default
  labels:
    app: app1
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: app1
