docker_openshift_kafka_scripts/docker_setup/03_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app1-ing
  namespace: default
  labels:
    app: app1
spec:
  rules:
    - host: app1.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: app1-service
              servicePort: http
